--- a/servidor/variables.env
+++ b/servidor/variables.env
@@ -1,1 +1,1 @@
-DB_MONGO=mongodb+srv://josue:admin123@cluster0.rwfbai8.mongodb.net/meanproductos
+DB_MONGO=mongodb+srv://josue:admin123@cluster0.qn4oafr.mongodb.net/meanproductos
