--- a/mean 2/cliente/package.json
+++ b/mean 2/cliente/package.json
@@ -21,6 +21,7 @@
     "@ng-bootstrap/ng-bootstrap": "^13.1.1",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.2",
+    "bootstrap-icons": "^1.10.2",
     "mdb-angular-ui-kit": "^3.0.0",
     "ngx-toastr": "^15.2.0",
     "rxjs": "~7.5.0",
